Added allowed IPs for management and deny IPs

--- a/.env_sample
+++ b/.env_sample
@@ -1,3 +1,5 @@
 phashReplace=$3$samplePhash$ThisIsNotARealPhash
 publicKeyReplace=somePublicKey
 sysLogIp=0.0.0.0
+allowManagementIp=0.0.0.0/0
+denyManagementIp=0.0.0.0
